fix wrap and page color

--- a/src/theme/saori/css/style.css
+++ b/src/theme/saori/css/style.css
@@ -1,5 +1,7 @@
 body {
     margin:0;
+    word-wrap : break-word;
+    overflow-wrap : break-word;
 }
 
 #blog-header {
